
  [ Klaus Ade Johnstad ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.
    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.

  [ Stefan Baur ]
  * New upstream release (4.1.1.0):
    - res/i18n/x2goclient_de.ts: update German translation file.

 -- X2Go Release Manager <git-admin@x2go.org>  Wed, 22 Feb 2017 07:13:10 +0100

x2goclient (4.1.0.1-0x2go1) unstable; urgency=medium

  [ Mihai Moldovan ]
  * New upstream version (4.1.0.1):
    - src/onmainwindow.cpp: unbreak Windows and OS X builds - directRDP is
      only available on Linux, so guard new section.
    - src/sessionbutton.cpp: only append "XDM@" string to server text if a
      direct XDMCP session was requested. Issue automatically found by GCC.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.1):
    - Add "direct XDMCP" functionality.
    - Disable sound button on direct RDP and XDMCP sessions.
      Set for direct XDMCP session autologin=true.
      Set for direct XDMCP session username=XDM.

  [ Seth Galitzer ]
  * New upstream version (4.1.0.1):
    - src/help.cpp: add documentation for the --background option.
      Part of #1162.
    - {src/{help.cpp,onmainwindow.{cpp,h}},man/man1/x2goclient.1}: add new
      --branding option that replaces the seal logo. Fixes: #1162.

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 14 Sep 2017 03:06:33 +0200

x2goclient (4.1.0.0-0x2go1) unstable; urgency=medium

  [ Mihai Moldovan ]
  * New upstream version (4.1.0.0):
    - src/sessionbutton.cpp: replace drop down menu button on session buttons
      with a more prominent, bigger settings gear icon. Requested for
      visibility.
    - src/onmainwindow.cpp: add debug statements to createRSAKey () regarding
      the host pub key locations on OS X.
    - src/onmainwindow.cpp: fix error message string in
      printSshDError_noHostPubKey ().